# comp520-bot

./: .env.example  .gitignore  README.md  hello.py  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
App/: main.py  scoreboard.py
app/: main.py
deploy/: bot.service  checkout  setup
src/bot/: __main__.py  alias.py  error.py  scoreboard.py  update_tracker.py
