[tool.poetry]
name = "comp520-bot"
version = "0.1.0"
description = ""
authors = ["Sam Zhang <sam.zijing.zhang@gmail.com>"]
license = "GNU 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
py-cord = "^2.6.1"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
