[project]
name = "comp520-bot"
version = "0.0.0"
description = "Discord bot for Discord bot for retrieving and displaying COMP520 test results from online testers"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
  "beautifulsoup4>=4.13.3",
  "py-cord>=2.6.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bot = "bot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.poetry]
name = "bot"
version = "0.0.0"
packages = [ { include = "bot", from = "src" } ]

[tool.poetry.scripts]
bot = "bot.__main__:main"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20241016",
]
